# QtScrcpy

./: .clang-format  .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  LICENSE  Makefile  README.md  README_EN.md  README_zh.md  TODO.md  TODO.txt  all.pro  build_for_win.bat  cmake_install.cmake  publish_for_win.bat
.github/: FUNDING.yml
QtScrcpy/: -CMakeLists.txt  CMakeLists.txt  MainWindow.qml  Makefile  QtScrcpy.pro  clang-format-all.sh  cmake_install.cmake  dialog.cpp  dialog.h  dialog.ui  main.cpp  qml.qrc  res.qrc  toolform.cpp  toolform.h  toolform.ui  videoform.cpp  videoform.h  videoform.ui
QtScrcpy/QtScrcpyCore/: CMakeLists.txt
QtScrcpy/QtScrcpyCore/include/: QtScrcpyCore.h  QtScrcpyCoreDef.h  adbprocess.h  include.pri
QtScrcpy/QtScrcpyCore/src/adb/: adbprocess.cpp  adbprocessimpl.cpp  adbprocessimpl.h
QtScrcpy/QtScrcpy_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
QtScrcpy/QtScrcpy_autogen/7WSARK52GL/: moc_groupcontroller.cpp  moc_groupcontroller.cpp.d
QtScrcpy/QtScrcpy_autogen/B2KWJJ5A6K/: moc_keepratiowidget.cpp  moc_keepratiowidget.cpp.d  moc_magneticwidget.cpp  moc_magneticwidget.cpp.d
QtScrcpy/QtScrcpy_autogen/KH43KSYMFX/: moc_config.cpp  moc_config.cpp.d
QtScrcpy/QtScrcpy_autogen/PZONOMFGYT/: moc_audiooutput.cpp  moc_audiooutput.cpp.d
QtScrcpy/QtScrcpy_autogen/RZRAGMB46M/: moc_qyuvopenglwidget.cpp  moc_qyuvopenglwidget.cpp.d
QtScrcpy/QtScrcpy_autogen/UYX5XTB5RZ/: moc_dialog.cpp  moc_dialog.cpp.d  moc_toolform.cpp  moc_toolform.cpp.d  moc_videoform.cpp  moc_videoform.cpp.d
QtScrcpy/QtScrcpy_autogen/include/: ui_dialog.h  ui_toolform.h  ui_videoform.h
QtScrcpy/TestQml/: CMakeLists.txt  Main.qml  main.cpp
QtScrcpy/adb/: CMakeLists.txt  adb.pri  adbprocess.cpp  adbprocess.h
QtScrcpy/audio/: audiooutput.cpp  audiooutput.h
QtScrcpy/common/: CMakeLists.txt  common.pri  qscrcpyevent.h
QtScrcpy/controller/: controller.cpp  controller.h
QtScrcpy/controller/inputconvert/: controlmsg.cpp  inputconvert.pri  inputconvertgame.cpp  inputconvertgame.h
QtScrcpy/controller/receiver/: devicemsg.cpp  receiver.cpp  receiver.pri
QtScrcpy/decoder/: avframeconvert.cpp  avframeconvert.h  decoder.cpp  decoder.h  decoder.pri  fpscounter.h  frames.cpp  stream.cpp  stream.h  videobuffer.cpp  videobuffer.h
QtScrcpy/device/: CMakeLists.txt  device.cpp  device.h  device.pri
QtScrcpy/device/android/: CMakeLists.txt  android.pri  input.h  keycodes.h
QtScrcpy/device/controller/: CMakeLists.txt  controller.cpp  controller.h  controller.pri
QtScrcpy/device/decoder/: CMakeLists.txt  avframeconvert.cpp  avframeconvert.h  decoder.cpp  decoder.h  decoder.pri  fpscounter.cpp  fpscounter.h  videobuffer.cpp  videobuffer.h
QtScrcpy/device/filehandler/: CMakeLists.txt  filehandler.cpp  filehandler.h  filehandler.pri
QtScrcpy/device/recorder/: CMakeLists.txt  recorder.cpp  recorder.h  recorder.pri
QtScrcpy/device/render/: CMakeLists.txt  qyuvopenglwidget.cpp  qyuvopenglwidget.h
QtScrcpy/device/server/: CMakeLists.txt  server.cpp  server.h  tcpserver.cpp  videosocket.cpp  videosocket.h
QtScrcpy/device/stream/: CMakeLists.txt  stream.cpp  stream.h
QtScrcpy/device/ui/: CMakeLists.txt  toolform.cpp  toolform.h  toolform.ui  ui.pri  videoform.cpp  videoform.h  videoform.ui
QtScrcpy/devicemanage/: CMakeLists.txt  devicemanage.cpp  devicemanage.h  devicemanage.pri
QtScrcpy/ffmpeg/lib/: swresample.lib
QtScrcpy/filehandler/: filehandler.h
QtScrcpy/fontawesome/: CMakeLists.txt  fontawesome.pri  iconhelper.cpp  iconhelper.h
QtScrcpy/groupcontroller/: groupcontroller.cpp  groupcontroller.h
QtScrcpy/i18n/: QtScrcpy_en.qm  QtScrcpy_en.ts  QtScrcpy_zh.qm  QtScrcpy_zh.ts
QtScrcpy/include/: QtScrcpyCore.h  QtScrcpyCoreDef.h
QtScrcpy/inputcontrol/: controlevent.cpp  controlevent.h  controller.cpp  controller.h  controlmsg.cpp  controlmsg.h  deviceevent.cpp  deviceevent.h  devicemsg.h  inputcontrol.pri  inputconvertbase.cpp  inputconvertbase.h  inputconvertgame.cpp  inputconvertgame.h  inputconvertnormal.cpp  inputconvertnormal.h  receiver.cpp  receiver.h
QtScrcpy/qml/: pinwheel.qml  scrcpyitem.cpp  scrcpyitem.h  scrcpymanager.cpp  scrcpymanager.h
QtScrcpy/recorder/: recorder.cpp  recorder.h
QtScrcpy/render/: qyuvopenglwidget.cpp
QtScrcpy/res/: Info_Mac.plist  Info_Mac.plist.in  Info_mac.plist  QtScrcpy.icns  QtScrcpy.rc  psblack.css  res.qrc
QtScrcpy/res/i18n/: CMakeLists.txt  QtScrcpy_en.qm  QtScrcpy_en.ts  QtScrcpy_zh.qm  QtScrcpy_zh.ts  en_US.qm  en_US.ts  hu_HU.qm  hu_HU.ts  ja_JP.qm  ja_JP.ts  ko_KR.qm  ko_KR.ts  zh_CN.qm  zh_CN.ts
QtScrcpy/res/qml/: MainWindow.qml
QtScrcpy/res/qss/: psblack.css
QtScrcpy/server/: devicesocket.cpp  devicesocket.h  server.cpp  server.h  server.pri  tcpserver.h
QtScrcpy/sndcpy/: sndcpy.apk  sndcpy.bat  sndcpy.sh
QtScrcpy/stream/: stream.cpp  stream.h  stream.pri
QtScrcpy/ui/: dialog.cpp  dialog.h  dialog.ui  toolform.cpp  toolform.h  toolform.ui  ui.pri  videoform.cpp  videoform.h  videoform.ui
QtScrcpy/uibase/: CMakeLists.txt  keepradiowidget.cpp  keepradiowidget.h  keepratiowidget.cpp  keepratiowidget.h  magneticwidget.cpp  magneticwidget.h  magneticwidget.ui  uibase.pri  windowframelesshelper.cpp  windowframelesshelper.h  windowframelesshelper.mm  windowframelesshelpermac.h  windowframelesshelpermac.mm  windownativeeventfilterwin.cpp  windownativeeventfilterwin.h
QtScrcpy/uibase/windowframelesshelper/: nativewindowutils.cpp  nativewindowutils.h  nativewindowutils.mm  windowframelesshelper.cpp  windowframelesshelper.h  windowframelesshelper.pri  windowframelessmanager.cpp  windowframelessmanager.h  windownativeeventfiltermac.h  windownativeeventfiltermac.mm  windownativeeventfilterwin.cpp  windownativeeventfilterwin.h
QtScrcpy/util/: CMakeLists.txt  bufferutil.cpp  bufferutil.h  cocoamousetap.h  cocoamousetap.mm  compat.h  config.cpp  config.h  path.h  path.mm  util.pri  version.h  winutils.cpp  winutils.h
QtScrcpy/util/mousetap/: CMakeLists.txt  cocoamousetap.h  cocoamousetap.mm  mousetap.cpp  mousetap.h  mousetap.pri  winmousetap.cpp  winmousetap.h  xmousetap.cpp  xmousetap.h
(+166 files in other folders)
